Another deprecated constructor